# Mini-Code

./: .gitignore  LICENSE  README.md  main.py  minicode_cli.py  pyproject.toml
.github/workflows/: tests.yml
agent/: context_builder.py  llm_client.py  loop.py  response_formatter.py  skill_router.py
docs/: real-llm-example.md  spec-v0.1.1.md  spec-v0.2.0.md
docs/superpowers/plans/: 2026-06-20-cli-entry-v0.2.md  2026-06-20-display-enhancements-v0.2.1.md  2026-06-20-evidence-pack.md  2026-06-20-interview-polish.md  2026-06-20-minicode-mvp.md
docs/superpowers/specs/: 2026-06-20-cli-entry-v0.2-design.md  2026-06-20-display-enhancements-v0.2.1-design.md  2026-06-20-evidence-pack-design.md  2026-06-20-interview-polish-design.md  2026-06-20-minicode-mvp-design.md
examples/sample_project/: .env  README.md
examples/sample_project/app/: main.py  user_router.py  user_schema.py  user_service.py
examples/sample_project/tests/: test_user.py
memory/: memory_writer.py
safety/: permission_checker.py
skills/: __init__.py  skills.json
tests/: test_cli_acceptance.py  test_context_builder.py  test_demo_project.py  test_file_tools.py  test_llm_client.py  test_loop_helpers.py  test_main.py  test_memory_writer.py  test_minicode_cli.py  test_packaging.py  test_permission_checker.py  test_query_loop.py  test_response_formatter.py  test_search_tools.py  test_skill_router.py  test_tool_executor.py
tools/: file_tools.py  search_tools.py  tool_executor.py
